--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>王鹏俊</title>
 </head>
 <body>
 <h1>大家好！这里是王鹏俊的个人主页。</h1>
